[package]
name = "exif-edit"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
gloo = "0.11.0"
gufo = "0.1.3"
gufo-exif = "0.1.3"
little_exif = "0.6.3"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["File", "HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
