[package]
name = "exif-edit"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
encoding = "0.2.33"
gloo = { version = "0.11.0", features=["timers"] }
gloo-utils = "0.2.0"
gufo = "0.1.3"
gufo-exif = "0.1.3"
leaflet = "0.4.1"
little_exif = { git = "https://github.com/doraneko94/little_exif" }
num-rational = "0.4.2"
num-traits = "0.2.19"
png = "0.17.16"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Blob", "BlobPropertyBag", "DataTransfer", "DragEvent", "File", "HtmlInputElement", "HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }

[dev-dependencies]
regex = "1.11.1"
